log4shell/openshift/10-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: settlement-app
    app.kubernetes.io/component: settlement-app
    app.kubernetes.io/instance: settlement-app
  name: settlement-app
  namespace: vulnerable-log4j
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: settlement-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: settlement-app
    spec:
      containers:
      - image: registry.itix.xyz/vulnerable/vulnerable-log4j:latest
        imagePullPolicy: Always
        name: settlement-app
#        env:
#        - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
#          value: "true"
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
