log4shell/openshift/30-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apiserver
  name: apiserver
  namespace: vulnerable-log4j
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: apiserver
    weight: 100
  wildcardPolicy: None
